.deployment/deployment.yaml
apiVersion: v1
kind: Service
metadata:
    name: nginx-service
    namespace: marketplace
spec:
    selector:
        app: php-nginx
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: php-nginx-deployment
    namespace: marketplace
spec:
    replicas: 1
    selector:
        matchLabels:
            app: php-nginx
    template:
        metadata:
            labels:
                app: php-nginx
        spec:
            containers:
                - name: php
                  image: docker.io/your-repo/your-php-image:latest
                  imagePullPolicy: IfNotPresent
                  volumeMounts:
                      - name: project-dir
                        mountPath: /var/www
                - name: nginx
                  image: docker.io/your-repo/your-nginx-image:latest
                  imagePullPolicy: IfNotPresent
                  volumeMounts:
                      - name: project-dir
                        mountPath: /var/www
                      - name: public-dir
                        mountPath: /var/www/public
            volumes:
                - name: project-dir
                  persistentVolumeClaim:
                      claimName: project-pvc
                - name: public-dir
                  persistentVolumeClaim:
                      claimName: public-pvc
