.deployment/rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
    name: rabbitmq-service
    namespace: marketplace
spec:
    selector:
        app: rabbitmq
    ports:
        - protocol: TCP
          port: 5672
          targetPort: 5672
          name: amqp
        - protocol: TCP
          port: 15672
          targetPort: 15672
          name: management

---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: rabbitmq-deployment
    namespace: marketplace
spec:
    replicas: 1
    selector:
        matchLabels:
            app: rabbitmq
    template:
        metadata:
            labels:
                app: rabbitmq
        spec:
            containers:
                - name: rabbitmq
                  image: docker.io/your-repo/your-rabbimq-image:latest
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 5672
                      - containerPort: 15672
                  volumeMounts:
                      - mountPath: /var/lib/rabbitmq
                        name: rabbitmq-storage
            volumes:
                - name: rabbitmq-storage
                  persistentVolumeClaim:
                      claimName: rabbitmq-pvc
